Fix sidebar on mobile

--- a/packages/chat/src/baseblocks/chat/components/chat-content/ChatContent.module.scss
+++ b/packages/chat/src/baseblocks/chat/components/chat-content/ChatContent.module.scss
@@ -15,8 +15,12 @@
     margin-bottom: 5px;
   }
 
+  background-color: #fafafa;
+  padding-left: 5px;
+  padding-right: 5px;
+
   .input {
-    position: absolute;
+    position: relative;
     bottom: 0;
     max-width: 900px;
     width: 100%;
@@ -27,7 +31,6 @@
     background: #fff;
     border-radius: 10px;
     margin: 5px;
-    margin-left: 0;
     border-color: #bababa;
     border: 1px solid #bababa;
 
@@ -67,7 +70,7 @@
     background: #fafafa;
     height: 100%;
     width: 100%;
-    
+
     overflow: auto;
 
     .messages {
